--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -22,6 +22,7 @@
 
     --background1:var(--color7);
 /* SISTEMA DE DISEÑO: SPACERS */
+    --spacer121: 7.5rem;
     --spacer101: 5.61rem;
     --spacer76:4.209rem;
     --spacer57:4.209rem;
@@ -36,7 +37,7 @@
 
 }
 html{
-    cursor:url("../images/circle.svg"), auto;
+    cursor: url('../images/circle.svg'), auto;
 }
 body{
     font-family: 'Inter', sans-serif;
@@ -54,6 +55,9 @@ h1{
 }
 h2{
     font-size:var(--spacer76);
+    letter-spacing: -0.03em;
+    margin-bottom: 0.5em;
+    color: var(--color5);
 }
 h3{
     font-size:var(--spacer57);
@@ -65,9 +69,10 @@ p{
     font-size:var(--spacer18);
 }
 
-.home{
+
+.contenedor{
     max-width: calc(var(--spacer101)*16);
-    margin: var(--spacer24) auto;
+    margin: 0 auto;
     padding: var(--spacer43);
     border-left: 3px solid var(--color5);
     background: var(--color8); 
@@ -76,7 +81,7 @@ p{
 }
 
 
-.home header h1{
+.contenedor header h1{
     font-size: var(--spacer43);
     text-transform: uppercase;
     font-weight: 100;
@@ -84,10 +89,15 @@ p{
     margin-bottom: 0;
 
 }
-.home h2{
+.contenedor header h2{
+    font-size:var(--spacer24);
+    text-transform: uppercase;
     font-weight: 100;
+    letter-spacing: .05em;
+    margin-bottom: 0;
 }
-.home header{
+
+.contenedor header{
     margin-bottom: var(--spacer57);
     display: flex;
     gap:var(--spacer24);
@@ -96,12 +106,12 @@ p{
     align-items: center;
     padding-bottom: var(--spacer57);
 }
-.home nav ul{
+.contenedor header> nav ul{
     display: flex;
     list-style: none;
     justify-content: start;
 }
-.home nav ul li a{
+.contenedor header> nav ul li a{
     display: block;
     background: var(--color8);
     padding: var(--spacer10) var(--spacer13); 
@@ -113,31 +123,110 @@ p{
     text-transform: uppercase;
     transition: all 500ms;
 }
-.home nav ul li a:hover{
+.contenedor header> nav ul li a:hover{
     background: var(--color5);
     color: var(--color8);
 }
-.home main{
+.contenedor main{
    
 }
-.home main p{
+.contenedor main p{
     margin-bottom: var(--spacer57);
     font-size: var(--spacer76);
     color: var(--color10);
+    line-height: 1.1em;
 }
-.home main p em{
+.contenedor main p em{
     color: var(--color3);
 }
 
-.home main .ornamento{
+.contenedor main .ornamento{
     width: 100px;
     height: 100px;
     margin: 0 auto var(--spacer57) auto;
     display: block;
     fill: var(--color6);
-    transition: all 1s;
+    transition: all 1s ease-in-out;
 }
-.home main .ornamento:hover{
+.contenedor main .ornamento:hover{
     fill: var(--color3);
+    transform: rotate(360deg);
+}
+
+/*GUSTOS*/
+
+.gustos main ul{
+    display: flex;
+    list-style:none;
+    flex-flow: column;
+    gap: var(--spacer57);
+}
+.gustos main ul li{
+    background: var(--color7);
+    min-height: 200px;
+    display: flex;
+    justify-content: end;
+    align-items: end;
+    padding: var(--spacer24);
+}
+.gustos main ul li:nth-child(1){
+    background: url('../images/musicales.jpg') no-repeat center;
+    background-size: cover;
+    transition:all 0.8s ease-out;
+    filter:saturate(0);
+}
+.gustos main ul li:nth-child(1):hover{
+    transform: scale(1.1);
+    box-shadow: 0 -10px 20px rgba(0, 0, 0, 0.5);
+    filter:saturate(1);
+}
+.gustos main ul li:nth-child(1):hover a{
+    font-size: var(--spacer121);
+}
+
+.gustos main ul li:nth-child(2){
+    background: url('../images/culturales.jpg') no-repeat center;
+    background-size: cover;
+    filter:saturate(0);
+    transition:all 0.8s ease-out;
+}
+.gustos main ul li:nth-child(2):hover{
+    transform: scale(1.1);
+    box-shadow: 0 -10px 20px rgba(0, 0, 0, 0.5);
+    filter:saturate(1);
+}
+.gustos main ul li:nth-child(2):hover a{
+    font-size: var(--spacer121);
+}
+.gustos main ul li a{
+    text-decoration: none;
+    font-weight: 100;
+    color: #000;
+    font-size: var(--spacer43);
+    display: block;
+    transition: all 500ms;
+}
+/*MUSICA*/
+
+.bandas{
+    list-style:none;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap:var(--spacer43)
+}
+.bandas img{
+    width: 100%;
+    display: block;
+    margin-bottom: var(--spacer13);
+}
+.contenedor .bandas h3{
+    font-size: var(--spacer43);
+    margin-bottom: var(--spacer18);
+    text-align: center;
+}
+.contenedor .bandas p{
+    font-size: var(--spacer18);
+    line-height: 1.3em;
+    margin-bottom: var(--spacer18);
 }
 
